--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/src/assets/fav2.ico">
+    <link rel="icon" href="/src/assets/fav2.ico" />
     <title>StartConnect-Hub</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
   </body>
 </html>
